--- a/pacman.css
+++ b/pacman.css
@@ -1,9 +1,11 @@
 body {
   text-align: center;
-  background-color: rgb(137, 207, 245);
-
   background-repeat: no-repeat;
   background-size: cover;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
 }
 
 @media only screen and (max-width: 800px) {
@@ -66,6 +68,9 @@ h1 {
   height: 75px;
   width: 75px;
   /* margin: 0 auto; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .buttons {
