--- a/pacman.css
+++ b/pacman.css
@@ -1,5 +1,6 @@
 body {
   text-align: center;
+  background-color: rgb(237, 179, 208);
   background-repeat: no-repeat;
   background-size: cover;
   display: block;
@@ -60,6 +61,11 @@ h1 {
   max-width: 400px;
   min-width: 400px;
   background-color: rgb(198, 242, 153);
+}
+
+img {
+  max-width: 50px;
+  min-width: 50px;
 }
 
 .box {
